# Preliminary-study-work

install/: local_setup.sh  setup.sh
install/status_interfaces/include/status_interfaces/status_interfaces/msg/: target_state.h
install/status_interfaces/share/status_interfaces/: local_setup.sh  package.sh
install/status_topics/lib/status_topics/: sys_status_pub  sys_status_sub  sys_status_trans
install/status_topics/share/status_topics/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/target_state_pkg/share/target_state_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/target_state_pkg/share/target_state_pkg/cmake/: ament_cmake_export_libraries-extras.cmake  export_target_state_pkg__rosidl_generator_cExport-noconfig.cmake  export_target_state_pkg__rosidl_generator_cppExport.cmake  export_target_state_pkg__rosidl_generator_pyExport.cmake  export_target_state_pkg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_target_state_pkg__rosidl_typesupport_fastrtps_cExport.cmake  export_target_state_pkg__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  (+7 more)
ros2_ws/log/: latest_build
ros2_ws/src/target_state_pkg/: CMakeLists.txt
ros2_ws/src/target_state_pkg/scripts/: processor_node.py  publisher_node.py  subscriber_node.py
src/status_interfaces/: CMakeLists.txt
src/status_topics/: setup.cfg  setup.py
src/status_topics/status_topics/: sys_status_trans.py
(+24 files in other folders)
